Finalize project cards, fixed an issue with the profile pic

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section id="home" class="hero-section">
             <div class="hero-content">
                 <div class="profile-image">
-                    <img src="\prof.jpg" alt="Alexander Pittas" id="profile-pic">
+                    <img src="prof.jpg" alt="Alexander Pittas" id="profile-pic">
                 </div>
                 <div class="hero-text">
                     <h2>Data & AI Engineer</h2>
@@ -64,11 +64,12 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <h3>Project 4</h3>
-                    <p>Description of your second project. Highlight your role and the impact of the project.</p>
+                    <h3>Social Data Analysis and Visualization - DTU</h3>
+                    <p>This project aims to determine whether fire incidents have increased in the city of San Francisco. If a difference does exist, we hope to uncover possible explanations for it. 
+                        Moreover, different socialeconomic factors are also going to be investigated to se if there is any kind of correlation between incidents and these factors.</p>
                     <div class="project-links">
-                        <a href="#" target="_blank"><i class="fab fa-github"></i> View on GitHub</a>
-                        <a href="#" target="_blank"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                        <a href="https://github.com/Alpiexta/SocialDataAnalysis" target="_blank"><i class="fab fa-github"></i> View on GitHub</a>
+                        <a href="https://alpiexta.github.io/SocialDataAnalysis/" target="_blank"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                     </div>
                 </div>
             </div>
