Project card changes

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 </div>
                 <div class="project-card">
                     <h3>Social Data Analysis and Visualization - DTU</h3>
-                    <p>This project aims to determine whether fire incidents have increased in the city of San Francisco. If a difference does exist, we hope to uncover possible explanations for it. 
-                        Moreover, different socialeconomic factors are also going to be investigated to se if there is any kind of correlation between incidents and these factors.</p>
+                    <p>This project investigated fire incident trends in San Francisco to determine whether their frequency has increased over time.
+                         We also analyzed socioeconomic factors to identify potential correlations and uncover underlying causes behind changes in fire occurrence.</p>
                     <div class="project-links">
                         <a href="https://github.com/Alpiexta/SocialDataAnalysis" target="_blank"><i class="fab fa-github"></i> View on GitHub</a>
                         <a href="https://alpiexta.github.io/SocialDataAnalysis/" target="_blank"><i class="fas fa-external-link-alt"></i> Live Demo</a>
